--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="navbar-total">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-						data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						data-target="#bs-example-navbar-collapse-1" aria-expanded="false" style="margin-top: 15px;">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
